--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1> Mirzapur </h1>
+	<h2> Pankaj Tripathi </h2>
+	<h3> This movie Based on How to rule the people and Show powerful man rule the people </h3>
+	<h4> Main hero munna bhaiya and pankaj triphati, guddu and bablu </h4>
+	<h5> IMDB rating is 9.5 and release date 2 august</h5>
+	<h6> Produced by: Karan Johar </h6>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
