--- a/main.html
+++ b/main.html
@@ -8,12 +8,43 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1> Mirzapur </h1>
-	<h2> Pankaj Tripathi </h2>
-	<h3> This movie Based on How to rule the people and Show powerful man rule the people </h3>
-	<h4> Main hero munna bhaiya and pankaj triphati, guddu and bablu </h4>
-	<h5> IMDB rating is 9.5 and release date 2 august</h5>
-	<h6> Produced by: Karan Johar </h6>
+	<header>
+		<h1> Mirzapur </h1>
+	</header>
+	<nav>
+		<ul>
+			<li id="nav-actor"> Pankaj Triphati</li>
+			<li id="nav-quote">Good movie</li>
+		</ul>
+	</nav>
+	<section>
+		<h2> Summary this movie </h2>
+		<p> This is a good movie here some romatic story and fight sence </p>
+	</section>
+	 <section id="actor">
+    <h2>Main Actors</h2>
+    <ul>
+      <li>Pankaj Triphti</li>
+      <li>Akshay Kumar</li>
+      <li>Guddu Pandit</li>
+      <li>Munna bhaiya</li>
+      <li>Bablu pandit</li>
+    </ul>
+  </section>
+	<Section id="quote">
+		<h2> Favorite quote </h2>
+		<blockquote>
+			Munna abhi to baache ho
+		</blockquote>
+	</Section>
+<aside>
+	<h3> Imformation </h3>
+	<p> <strong>IMDB rating</strong> 9.5/10 </p>
+	<p> <strong>Release date</strong> 24 august</p>
+</aside>
+	<footer>
+		<p>Produce by: Karan johar</p>
+	</footer>
 	
     <script type="text/javascript" src="./script.js">
 </script>
