--- a/main.html
+++ b/main.html
@@ -11,16 +11,19 @@
 	<header>
 		<h1> Mirzapur </h1>
 	</header>
+	  <!-- Navigation -->
 	<nav>
 		<ul>
-			<li id="nav-actor"> Pankaj Triphati</li>
-			<li id="nav-quote">Good movie</li>
+			<li id="nav-actor" href="#actor" >  Pankaj Triphati</li>
+			<li id="nav-quote" herf="quote">Good movie</li>
 		</ul>
 	</nav>
+	 <!-- Summary -->
 	<section>
 		<h2> Summary this movie </h2>
 		<p> This is a good movie here some romatic story and fight sence </p>
 	</section>
+	  <!-- Actors Section -->
 	 <section id="actor">
     <h2>Main Actors</h2>
     <ul>
@@ -31,17 +34,20 @@
       <li>Bablu pandit</li>
     </ul>
   </section>
+	 <!-- Quotes Section -->
 	<Section id="quote">
 		<h2> Favorite quote </h2>
 		<blockquote>
 			Munna abhi to baache ho
 		</blockquote>
 	</Section>
+	 <!-- Aside -->
 <aside>
 	<h3> Imformation </h3>
 	<p> <strong>IMDB rating</strong> 9.5/10 </p>
 	<p> <strong>Release date</strong> 24 august</p>
 </aside>
+	  <!-- Footer -->
 	<footer>
 		<p>Produce by: Karan johar</p>
 	</footer>
