--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
 	  <!-- Navigation -->
 	<nav>
 		<ul>
-			<li id="nav-actor" href="#actor" >  Pankaj Triphati</li>
-			<li id="nav-quote" herf="quote">Good movie</li>
+			<li ids="nav-actor" href="#actor" >  Pankaj Triphati</li>
+			<li ids="nav-quote" herf="quote">Good movie</li>
 		</ul>
 	</nav>
 	 <!-- Summary -->
