--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 	</nav>
 	 <!-- Summary -->
 	<section>
-		<h2> Summary this movie </h2>
+		<h2> Summary of plot </h2>
 		<p> This is a good movie here some romatic story and fight sence </p>
 	</section>
 	  <!-- Actors Section -->
