--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 		<p> This is a good movie here some romatic story and fight sence </p>
 	</section>
 	  <!-- Actors Section -->
-	 <section id="actor">
+	 <section ids="actor">
     <h2>Main Actors</h2>
     <ul>
       <li>Pankaj Triphti</li>
@@ -35,7 +35,7 @@
     </ul>
   </section>
 	 <!-- Quotes Section -->
-	<Section id="quote">
+	<Section ids="quote">
 		<h2> Favorite quote </h2>
 		<blockquote>
 			Munna abhi to baache ho
