--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
 	  <!-- Navigation -->
 	<nav>
 		<ul>
-			<li ids="nav-actor" href="#actor" >  Pankaj Triphati</li>
-			<li ids="nav-quote" herf="quote">Good movie</li>
+			<li id="nav-actor" href="#actor" >  Pankaj Triphati</li>
+			<li id="nav-quote" herf="quote">Good movie</li>
 		</ul>
 	</nav>
 	 <!-- Summary -->
@@ -24,7 +24,7 @@
 		<p> This is a good movie here some romatic story and fight sence </p>
 	</section>
 	  <!-- Actors Section -->
-	 <section ids="actor">
+	 <section id="actor">
     <h2>Main Actors</h2>
     <ul>
       <li>Pankaj Triphti</li>
@@ -35,7 +35,7 @@
     </ul>
   </section>
 	 <!-- Quotes Section -->
-	<Section ids="quote">
+	<Section id="quote">
 		<h2> Favorite quote </h2>
 		<blockquote>
 			Munna abhi to baache ho
@@ -49,7 +49,7 @@
 </aside>
 	  <!-- Footer -->
 	<footer>
-		<p>Produce by: Karan johar</p>
+		<p>Produce by: <strong>karan johar</strong></p>
 	</footer>
 	
     <script type="text/javascript" src="./script.js">
