--- a/main.html
+++ b/main.html
@@ -11,11 +11,11 @@
 	<header>
 		<h1> Mirzapur </h1>
 	</header>
-	  <!-- Navigation -->
+	  <!-- Nav -->
 	<nav>
 		
 			<li id="nav-actor" href="#actor" >  Pankaj Triphati</li>
-			<li id="nav-quote" herf="quote">Good movie</li>
+			<li id="nav-quote" herf="#quote">Good movie</li>
 		
 	</nav>
 	 <!-- Summary -->
@@ -36,8 +36,6 @@
 		</p>
 	</Section>
   </section>
-	 <!-- Quotes Section -->
-	
 	 <!-- Aside -->
 <aside>
 	<h3> Imformation </h3>
