--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@
 </aside>
 	  <!-- Footer -->
 	<footer>
-		<p>Produce by: <strong>karan johar</strong></p>
+		<p>Produce by: karan johar</p>
 	</footer>
 	
     <script type="text/javascript" src="./script.js">
