--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 	  <!-- Nav -->
 	<nav>
 		
-			<li id="nav-actor" href="#actor" >  Pankaj Triphati</li>
+			<li id="nav-actor" herf="#actor" >  Pankaj Triphati</li>
 			<li id="nav-quote" herf="#quote">Good movie</li>
 		
 	</nav>
