--- a/main.html
+++ b/main.html
@@ -13,38 +13,37 @@
 	</header>
 	  <!-- Nav -->
 	<nav>
-		
-			<li id="nav-actor" herf="#actor" >  Pankaj Triphati</li>
-			<li id="nav-quote" herf="#quote">Good movie</li>
-		
+			<li id="nav-actor" href="#actor" >  Pankaj Triphati</li>
+			<li id="nav-quote" href="#quote">Good movie</li>
 	</nav>
 	 <!-- Summary -->
 	<section>
 		<h2> Summary of plot </h2>
-		<p> This is a good movie here some romatic story and fight sence </p>
+		<p> This is a good movie here some romantic story and fight scenes </p>
 	</section>
 	  <!-- Actors Section -->
 	 <section id="actor">
     <h2>Main Actors</h2>
-      <li>Pankaj Triphti</li>
-      <li>Munna bhaiya</li>
-
-		 <Section id="quote">
+     <ul>
+		  <li>Pankaj Triphti</li>
+      <li>Munna bhaiya</li>	
+	 </ul>
+  </section>
+	 <section id="quote">
 		<h2> Favorite quote </h2>
 		<p>
 		Munna abhi to baache ho
 		</p>
-	</Section>
-  </section>
+	</section>
 	 <!-- Aside -->
 <aside>
-	<h3> Imformation </h3>
-	<p> <strong>IMDB rating</strong> 9.5/10 </p>
-	<p> <strong>Release date</strong> 24 august</p>
+	<h3> Information </h3>
+	<p> IMDB rating 9.5/10 </p>
+	<p> Release date 24 august</p>
 </aside>
 	  <!-- Footer -->
 	<footer>
-		<p>Produce by: karan johar</p>
+		<p>Produced by: karan johar</p>
 	</footer>
 	
     <script type="text/javascript" src="./script.js">
