--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
 	  <!-- Nav -->
 	<nav>
 			<ul>
-				<li id="nav-actor" href="#actor" >  Pankaj Triphati</li>
-			<li id="nav-quote" href="#quote">Good movie</li>
+				<li><a  id="nav-actor" href="#actor" > Pankaj Triphat</a></li>
+			    <li> <a id="nav-quote" href="#quote">Good movie</a></li>
 			</ul>
 	</nav>
 	 <!-- Summary -->
@@ -27,15 +27,13 @@
 	 <section id="actor">
     <h2>Main Actors</h2>
      <ul>
-		  <li>Pankaj Triphti</li>
+	  <li>Pankaj Triphti</li>
       <li>Munna bhaiya</li>	
 	 </ul>
   </section>
 	 <section id="quote">
 		<h2> Favorite quote </h2>
-		<p>
-		Munna abhi to baache ho
-		</p>
+		<p>Munna abhi to baache ho</p>
 	</section>
 	 <!-- Aside -->
 <aside>
