--- a/main.html
+++ b/main.html
@@ -27,15 +27,15 @@
  <section id="actor">
      <h2>Main Actors</h2>
      <ul>
-	        <li>Pankaj Triphti</li>
+	        <li>Pankaj Tripathi</li>
             <li>Munna bhaiya</li>	
 	 </ul>
   </section>
 
 	
 <section id="quote">
-		<h2> Favorite quote </h2>
-		<p>Munna abhi to baache ho</p>
+		<h2>Favorite Quote</h2>
+		<p>Munna, abhi tum bacche ho!</p>
 </section>
 	 <!-- Aside -->
 <aside>
