--- a/main.html
+++ b/main.html
@@ -12,43 +12,34 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<header>
-		<h1> Mirzapur </h1>
+		 Mirzapur
 	</header>
 	  <!-- Nav -->
 	<nav>
-			<ul>
-				<li><a  id="nav-actor" href="#actor" > Pankaj Triphat</a></li>
-			    <li> <a id="nav-quote" href="#quote">Good movie</a></li>
-			</ul>
+		<a  id="nav-actor" href="#actor" > Pankaj Triphat</a>
+		<a id="nav-quote" href="#quote">Good movie</a>
 	</nav>
 	 <!-- Summary -->
 	<section>
-		<h2> Summary of plot </h2>
-		<p> This is a good movie here some romantic story and fight scenes </p>
+		This is good movie
 	</section>
 	  <!-- Actors Section -->
  <section id="actor">
-     <h2>Main Actors</h2>
-     <ul>
-	        <li>Pankaj Tripathi</li>
-            <li>Munna bhaiya</li>	
-	 </ul>
+    Actor: Pankaj Triphati
   </section>
 
 	
 <section id="quote">
-		<h2>Favorite Quote</h2>
-		<p>Munna, abhi tum bacche ho!</p>
+		Munna, abhi tum bacche ho!
 </section>
 	 <!-- Aside -->
 <aside>
-	<h3> Information </h3>
-	<p> IMDB rating 9.5/10 </p>
-	<p> Release date 24 august</p>
+	 IMDB rating 9.5/10 
+     Release date 24 august
 </aside>
 	  <!-- Footer -->
 	<footer>
-		<p>Produced by: karan johar</p>
+		Produced by: karan johar
 	</footer>
 	
     <script type="text/javascript" src="./script.js">
