--- a/main.html
+++ b/main.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 
 <html>
-<html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mirzapur</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
@@ -30,7 +27,7 @@
 
 	
 <section id="quote">
-		Munna, abhi tum bacche ho!
+		This is good movie
 </section>
 	 <!-- Aside -->
 <aside>
