--- a/main.html
+++ b/main.html
@@ -31,8 +31,8 @@
 </section>
 	 <!-- Aside -->
 <aside>
-	 IMDB rating 9.5/10 
-     Release date 24 august
+	 IMDB rating 9.5
+     Release date 24 august 2025
 </aside>
 	  <!-- Footer -->
 	<footer>
