--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 	</section>
 	  <!-- Actors Section -->
  <section id="actor">
-    Actor: Pankaj Triphati
+    Actor Pankaj Triphati
   </section>
 
 	
@@ -31,7 +31,7 @@
 </section>
 	 <!-- Aside -->
 <aside>
-	 IMDB rating 9.5
+	 IMDb rating 9.5
      Release date 24 august 2025
 </aside>
 	  <!-- Footer -->
