--- a/main.html
+++ b/main.html
@@ -17,9 +17,9 @@
 		<a id="nav-quote" href="#quote">Good movie</a>
 	</nav>
 	 <!-- Summary -->
-	<section>
+	<summary>
 		This is good movie
-	</section>
+	</summary>
 	  <!-- Actors Section -->
  <section id="actor">
     Actor Pankaj Triphati
